--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.4",
-        "spatie/laravel-permission": "^5.10"
+        "laravolt/indonesia": "^0.35.0",
+        "spatie/laravel-permission": "^5.10",
+        "yajra/laravel-datatables-oracle": "^10.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
