--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/ui": "^4.2",
         "laravelcollective/html": "^6.4",
         "laravolt/indonesia": "^0.35.0",
+        "maatwebsite/excel": "*",
         "spatie/laravel-permission": "^5.10",
         "yajra/laravel-datatables-oracle": "^10.11"
     },
